src/objects/Session__c.object
<CustomObject>
    <fields>
        <fullName>A_V_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has A/V form been received?</inlineHelpText>
        <label>A/V Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Speakers_Identified__c</fullName>
        <label>All Speakers Identified?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendance__c</fullName>
        <label>Attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Audio_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Audio URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Audio_Visual_Requirements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Audio/Visual Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Group__c</fullName>
        <label>Business Group / Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile Networks</fullName>
                </value>
                <value>
                    <fullName>Network Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Cloud and Network Services</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Customer Experience</fullName>
                </value>
                <value>
                    <fullName>Strategy &amp; Technology</fullName>
                </value>
                <value>
                    <fullName>Executive Experience Center</fullName>
                </value>
                <value>
                    <fullName>Oulu Factory</fullName>
                </value>
                <value>
                    <fullName>Future X Lab</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Access Networks</fullName>
                    <isActive>false</isActive>
                    <label>Access Networks</label>
                </value>
                <value>
                    <fullName>Bell Labs</fullName>
                    <isActive>false</isActive>
                    <label>Bell Labs</label>
                </value>
                <value>
                    <fullName>Cloud Collaboration Hub</fullName>
                    <isActive>false</isActive>
                    <label>Cloud Collaboration Hub</label>
                </value>
                <value>
                    <fullName>Customer Operations</fullName>
                    <isActive>false</isActive>
                    <label>Customer Operations</label>
                </value>
                <value>
                    <fullName>End-to-End Solutions</fullName>
                    <isActive>false</isActive>
                    <label>End-to-End Solutions</label>
                </value>
                <value>
                    <fullName>Fixed Networks</fullName>
                    <isActive>false</isActive>
                    <label>Fixed Networks</label>
                </value>
                <value>
                    <fullName>Global Services</fullName>
                    <isActive>false</isActive>
                    <label>Global Services</label>
                </value>
                <value>
                    <fullName>IP &amp; Optical Networks</fullName>
                    <isActive>false</isActive>
                    <label>IP &amp; Optical Networks</label>
                </value>
                <value>
                    <fullName>Nokia Software</fullName>
                    <isActive>false</isActive>
                    <label>Nokia Software</label>
                </value>
                <value>
                    <fullName>Strategy</fullName>
                    <isActive>false</isActive>
                    <label>Strategy</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content_Owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Content Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Owner_email__c</fullName>
        <description>In order to notify content owner when Content Review Call date is getting to the end (5 days before it will fire a notification)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Content Owner email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Content_Review_Call_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Content Review Call date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Solution_Architect_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Solution Architect Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Demo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Demo</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You should enter an active demo</errorMessage>
            <filterItems>
                <field>Demo__c.Status__c</field>
                <operation>notEqual</operation>
                <value>Inactive</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Demo__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_hour__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>End_time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventCustomerSolutionArchitectId__c</fullName>
        <formula>Event__r.Customer_Solution_Architect__r.User_18_Digit_ID__c</formula>
        <label>EventCustomerSolutionArchitectId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventHostUserId__c</fullName>
        <formula>Event__r.Event_Host__r.User_18_Digit_ID__c</formula>
        <label>EventHostUserId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventMarketingUserId__c</fullName>
        <formula>Event__r.Marketing__r.User_18_Digit_ID__c</formula>
        <label>EventMarketingUserId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventRecordTypeId__c</fullName>
        <formula>LEFT(Event__r.RecordType.Id, 15)</formula>
        <label>EventRecordTypeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_host_email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event host email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event_record_type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event record type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Long Term / Strategic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_to_Event__c</fullName>
        <formula>HYPERLINK(&quot;./&quot; &amp;  Track__r.Event__r.Id  ,  Track__r.Event__r.Name , &quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Speaker__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please create or edit one ERM Stakeholder for this session</inlineHelpText>
        <label>Main Speaker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Marketing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BG Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publish_to_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be used for web integrations if you wish to publish data in Salesforce to your website.</description>
        <label>Publish to Web?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <description>This field is to get account name of the event</description>
        <formula>Event__r.Account__r.Name</formula>
        <label>Related Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_Setup__c</fullName>
        <label>Room Setup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Classroom</fullName>
                </value>
                <value>
                    <fullName>Hands-on training</fullName>
                </value>
                <value>
                    <fullName>Rounds</fullName>
                </value>
                <value>
                    <fullName>Theater</fullName>
                </value>
                <value>
                    <fullName>Crescents</fullName>
                </value>
                <value>
                    <fullName>Reception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Room</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Individual_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Individual Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session_Abstract__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Session Abstract</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Session_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Session Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Session_Format__c</fullName>
        <label>Session Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Presentation with customer(s)</fullName>
                </value>
                <value>
                    <fullName>Hands-on training</fullName>
                </value>
                <value>
                    <fullName>Panel with customers</fullName>
                </value>
                <value>
                    <fullName>Presentation without customer(s)</fullName>
                </value>
                <value>
                    <fullName>Demo with customer(s)</fullName>
                </value>
                <value>
                    <fullName>Customer Panel and Demo</fullName>
                </value>
                <value>
                    <fullName>Keynote</fullName>
                </value>
                <value>
                    <fullName>Partner Session</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_Info__c</fullName>
        <formula>TEXT(Start_time__c) &amp;&apos; - &apos;&amp;  LEFT(TEXT(Start_hour__c),5) &amp;&apos; - &apos;&amp; LEFT(TEXT(End_hour__c),5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Session Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Session_Owner2__c</fullName>
        <formula>Track__r.Track_Owner__r.FirstName + &quot; &quot; +  Track__r.Track_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Rating__c</fullName>
        <inlineHelpText>Enter session evaluation score (1-5, with 5 as the highest) - if applicable</inlineHelpText>
        <label>Session Rating</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Session_Slot__c</fullName>
        <label>Session Slot Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_Status__c</fullName>
        <inlineHelpText>Information needed before change to Approved status:</inlineHelpText>
        <label>Presentation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Ready_for_Approval</fullName>
                    <label>Ready for Approval</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_Theme__c</fullName>
        <label>Session Theme</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Theme 1</fullName>
                </value>
                <value>
                    <fullName>Theme 2</fullName>
                </value>
                <value>
                    <fullName>Theme 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Session Time</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Type__c</fullName>
        <label>Session Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Presentation</fullName>
                </value>
                <value>
                    <fullName>Discussion</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Break</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Dinner</fullName>
                </value>
                <value>
                    <fullName>Offsite</fullName>
                </value>
                <value>
                    <fullName>Transfers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Slides_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Slides URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Speaker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the speaker&apos;s record who will give the presentation.</description>
        <inlineHelpText>Search the speaker under Speakers- tab. Copy speaker&apos;s ID to this field. The speaker&apos;s name will be shown on the field below.</inlineHelpText>
        <label>Speaker ID</label>
        <referenceTo>Speaker__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Speaker_s_name__c</fullName>
        <formula>Speaker__r.Speaker_Internal__r.FirstName + &quot; &quot; +  Speaker__r.Speaker_Internal__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Speaker&apos;s name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sponsor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsored__c</fullName>
        <label>Sponsored?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_hour__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Start_time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Check and update session date and time. It is used for agenda creation.
Event start date is used as a default value. This value has to be between the start date and the end date of the event.</inlineHelpText>
        <label>Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Track</label>
        <referenceTo>Track__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>of_Survey_Responses__c</fullName>
        <label># of Survey Responses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>Session_Info__c</columns>
        <columns>Session_Type__c</columns>
        <columns>Business_Group__c</columns>
        <columns>Owner__c</columns>
        <columns>Main_Speaker__c</columns>
        <columns>Content_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Share_Sessions_with_Participants__c</fullName>
        <label>Share Sessions with Participants</label>
    </sharingReasons>
    <validationRules>
        <fullName>End_date_smaller_than_start_date</fullName>
        <active>true</active>
        <description>End Date Can´t be smaller than Start Date
Time shouldn&apos;t be blank if correspondent Date is</description>
        <errorConditionFormula>OR(
				  AND(  ISBLANK(Start_time__c), NOT(ISBLANK(Start_hour__c))
									)
				, AND(  ISBLANK(End_time__c),   NOT(ISBLANK(End_hour__c))
									)
				, AND (  End_time__c = Start_time__c
								         , End_hour__c &lt;= Start_hour__c
								       )
		       
   )</errorConditionFormula>
        <errorMessage>Please, fill the Date fields properly:
- End Date/Time cannot be smaller than Start Date/Time;
- Time shouldn&apos;t be blank if correspondent Date is.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Session_date_check</fullName>
        <active>true</active>
        <errorConditionFormula>OR (
ISBLANK(Event__r.Event_End_Date__c) ,
ISBLANK(Event__r.Event_Start_Date__c) ,
End_time__c &gt;  Event__r.Event_End_Date__c ,
Start_time__c  &lt; Event__r.Event_Start_Date__c)</errorConditionFormula>
        <errorMessage>The date of the session should fallen between the dates of the event. Please check the event&apos;s dates.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_and_End_Date</fullName>
        <active>true</active>
        <description>Start and End Date of the Session should be the same</description>
        <errorConditionFormula>Start_time__c !=  End_time__c</errorConditionFormula>
        <errorMessage>The session should have the same start and end dates.</errorMessage>
    </validationRules>
</CustomObject>