src/objects/Session__c/validationRules/End_date_smaller_than_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_smaller_than_start_date</fullName>
    <active>true</active>
    <description>End Date Can´t be smaller than Start Date
Time shouldn&apos;t be blank if correspondent Date is</description>
    <errorConditionFormula>OR(
				  AND(  ISBLANK(Start_time__c), NOT(ISBLANK(Start_hour__c))
									)
				, AND(  ISBLANK(End_time__c),   NOT(ISBLANK(End_hour__c))
									)
				, AND (  End_time__c = Start_time__c
								         , End_hour__c &lt;= Start_hour__c
								       )
		       
   )</errorConditionFormula>
    <errorMessage>Please, fill the Date fields properly:
- End Date/Time cannot be smaller than Start Date/Time;
- Time shouldn&apos;t be blank if correspondent Date is.</errorMessage>
</ValidationRule>