src/objects/Session__c/validationRules/Session_date_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Session_date_check</fullName>
    <active>true</active>
    <errorConditionFormula>OR (
ISBLANK(Event__r.Event_End_Date__c) ,
ISBLANK(Event__r.Event_Start_Date__c) ,
End_time__c &gt;  Event__r.Event_End_Date__c ,
Start_time__c  &lt; Event__r.Event_Start_Date__c)</errorConditionFormula>
    <errorMessage>The date of the session should fallen between the dates of the event. Please check the event&apos;s dates.</errorMessage>
</ValidationRule>